<resources>
    <string name="app_name">reCycle</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_speed">Speed (kmph):</string>
    <string name="title_distance">Distance (km):</string>
    <string name="title_time">Time (h:mm:ss):</string>
    <string name="default_speed">15.7</string>
    <string name="default_distance">10.8</string>
    <string name="default_time">1:05:36</string>

    <string name="start_workout">Start Workout</string>
    <string name="pause_workout">Pause Workout</string>
    <string name="resume_workout">Resume Workout</string>
    <string name="stop_workout">Stop Workout</string>
</resources>